<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.asus.smartlock.Login"
    android:background="#ffffff">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/loginHead"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintHorizontal_weight="1"
        android:background="#0cf"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintBottom_toTopOf="@+id/loginBody">

        <ImageView
            android:id="@+id/loginHeadBottom"
            android:layout_width="0dp"
            android:layout_height="84dp"
            android:background="@drawable/wave"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <com.example.asus.smartlock.lib.shapedimageview.ShapedImageView
            android:id="@+id/loginLogo"
            android:layout_width="204dp"
            android:layout_height="149dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:shape_mode="circle"
            app:srcCompat="@drawable/lock"
            app:layout_constraintVertical_weight="1" />

        <TextView
            android:id="@+id/loginTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SmartLock"
            android:textColor="#fff"
            android:textSize="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.67" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/loginBody"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toBottomOf="@+id/loginHead"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <EditText
            android:id="@+id/account"
            android:layout_width="339dp"
            android:layout_height="40dp"
            android:background="@drawable/ed_bg"
            android:ems="10"
            android:hint="@string/account"
            android:inputType="textPersonName"
            android:textColorHint="#64b2c5"
            android:textCursorDrawable="@drawable/color_cursor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.01"
            app:layout_constraintHorizontal_bias="0.517" />

        <EditText
            android:id="@+id/password"
            android:layout_width="339dp"
            android:layout_height="42dp"
            android:background="@drawable/ed_bg"
            android:ems="20"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="#64b2c5"
            android:textCursorDrawable="@drawable/color_cursor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.202"
            app:layout_constraintHorizontal_bias="0.517" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="287dp"
            android:layout_height="48dp"
            android:background="@drawable/round_btn"
            android:onClick="CheckUser"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:textSize="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.704" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
